# portfolio

./: .air.toml  .firebaserc  .gitignore  Makefile  docs-deploy.sh  docs-dev.sh  index.html  link.sh  mkdocs.yml  nav.json  sitemap.xml  styles.css  tags.md  test.html
.firebase/: hosting.YnVpbGQ.cache
Algorithmic Trading/: index.html
CSES/cpp-tips/: index.html
CSES/main/: index.html
Components/: index.html
Data Structures & Algorithms/Material/: index.html
Data Structures & Algorithms/Roadmap/: index.html
Design/CSS/: index.html
Design/fonts/: index.html
Self Host/: index.html
TODO/: index.html
css/: fancytree-override.css
ddr/: index.html
docs/: Components Required.md  Components.md  TODO.md  ddr.md  dump.md  flow.md  index.md
dump/: index.html
flow/: index.html
imagedb/: README.md  config.conf  config.yaml  new-api.md  package-lock.json  package.json  svelte.config.js
imagedb-api/: .env  constants.py  empty.txt  main.py  test.py  upload-appwrite.py
md-compiler/: compile.py  pyproject.toml
md_compiler/: pyproject.toml
md_compiler/compiler/: __init__.py  __main__.py  configs.py  mdcompiler.py  meta.py  tree.py
md_compiler/compiler/extensions/: __init__.py  callout.py  hspacer.py  strike.py
md_compiler/md_compiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mkdocs-shadcn/: README.md  pyproject.toml
nav/: index.html  package-lock.json  package.json  schema.json  vite.config.ts
search/: search_index.json
site/: index.html  sitemap.xml
templates/: base.html  built-in.css  styles.css
test/: index.html  sitemap.xml
(+638 files in other folders)
