[project]
name = "md-compiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pygments>=2.19.2",
    "python-markdown-math>=0.9",
]

[dependency-groups]
dev = [
    "md-compiler",
]

[tool.uv.sources]
md-compiler = { workspace = true }
